syntax = "proto3";

package post;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/drite/simple-blog/proto";

message Post {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreatePostRequest {
  string title = 2;
  string description = 3;
}

message GetPostRequest {
  int64 id = 1;
}

message PostResponse {
  Post post = 1;
}

message ListPostsRequest {}

message ListPostsResponse {
  repeated Post posts = 1;
}